--- a/wonoproperty_pms/views/report_account_statement.xml
+++ b/wonoproperty_pms/views/report_account_statement.xml
@@ -26,7 +26,7 @@
                             </div>
                             <div class="col-6 offset-2">
                                 <h1 style="font-weight:900;" class="text-right">
-                                    STATEMENT
+                                    Account Statement
                                 </h1>
                             </div>
                         </div>
@@ -73,41 +73,7 @@
                                     </table>
                                 </p>
                             </div>
-                            <div class="col-1"></div>
-                            <div class="col-3">
-                                <br/>
-                                <span class="bold-text">INVOICE TO</span>
-                                <br/>
-                                <span t-field="o.tenant_id.name"/>
-                                <t t-if="o.tenant_id.street">
-                                    <br/>
-                                    <span t-field="o.tenant_id.street"/>
-                                </t>
-                                <t t-if="o.tenant_id.street2">
-                                    <br/>
-                                    <span t-field="o.tenant_id.street2"/>
-                                </t>
-                                <br/>
-                                <t t-if="o.tenant_id.zip">
-                                    <span t-field="o.tenant_id.zip"/>
-                                        ,
-                                </t>
-                                <t t-if="o.tenant_id.city">
-                                    <span t-field="o.tenant_id.city"/>
-                                </t>
-                                <t t-if="o.tenant_id.state_id">
-                                        ,                                    <span t-field="o.tenant_id.state_id.name"/>
-                                </t>
-                                <br/>
-                                <span>
-                                    <b>Email: </b>
-                                </span>
-                                <t t-if="o.tenant_id.email">
-                                    <span t-field="o.tenant_id.email"/>
-                                </t>
-                            </div>
-
-                            <div class="col-3">
+                            <div class="col-4 offset-3">
                                 <table width="100%">
                                     <br/>
                                     <tr>
@@ -115,7 +81,7 @@
                                             <span>Property:</span>
                                         </td>
                                         <td>
-                                            <span style="font-weight:bold" t-field="o.property_id.name"/>
+                                            <span style="font-weight:bold" t-field="o.property_id.name"></span>
                                         </td>
                                     </tr>
                                     <tr>
@@ -129,22 +95,53 @@
                                 </table>
                             </div>
                         </div>
-                        <br/>
-
-
-
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-6">
+                                    <span class="bold-text">INVOICE TO</span>
+                                    <br/>
+                                    <span t-field="o.tenant_id.name"/>
+                                    <t t-if="o.tenant_id.street">
+                                        <br/>
+                                        <span t-field="o.tenant_id.street"/>
+                                    </t>
+                                    <t t-if="o.tenant_id.street2">
+                                        <br/>
+                                        <span t-field="o.tenant_id.street2"/>
+                                    </t>
+                                    <br/>
+                                    <t t-if="o.tenant_id.zip">
+                                        <span t-field="o.tenant_id.zip"/>
+                                        ,
+                                    </t>
+                                    <t t-if="o.tenant_id.city">
+                                        <span t-field="o.tenant_id.city"/>
+                                    </t>
+                                    <t t-if="o.tenant_id.state_id">
+                                        ,                                <span t-field="o.tenant_id.state_id.name"/>
+                                    </t>
+                                    <br/>
+                                    <span>
+                                        <b>Email: </b>
+                                    </span>
+                                    <t t-if="o.tenant_id.email">
+                                        <span t-field="o.tenant_id.email"/>
+                                    </t>
+                                </div>
+                            </div>
+                        </div>
                         <br/>
                         <div>
                             <table width="100%" class="table table-sm o_main_table">
                                 <tr>
-                                    <th id="th_invoice_date" class="text-left">
-                                        <span class="bold-text">Date</span>
+                                    <th id="th_invoice_date" class="text-center">
+                                        <span class="bold-text">Invoice Date</span>
                                     </th>
-                                    <th id="th_due_date" class="text-left">
+                                    <th id="th_due_date" class="text-center">
                                         <span class="bold-text">Due Date</span>
                                     </th>
-                                    <th id="th_invoice_no" class="text-left">
-                                        <span class="bold-text">Reference</span>
+                                    <th id="th_invoice_no" class="text-center">
+                                        <span class="bold-text">Invoice No</span>
                                     </th>
                                     <th id="th_description" class="text-left">
                                         <span class="bold-text">Item Description</span>
@@ -175,7 +172,7 @@
                                             <td name="invoice_date">
                                                 <span t-field="line.date"/>
                                             </td>
-                                            <td name="invoice_date">
+                                            <td  name="invoice_date">
                                                 <t t-if="line.move_type == 'out_invoice'">
                                                     <span class="text-center" t-field="line.invoice_date_due"/>
                                                 </t>
@@ -185,7 +182,7 @@
                                             </td>
                                             <td name="item_description">
                                                 <t t-if="line.move_type == 'out_invoice'">
-                                                    <t t-if="len(line.invoice_line_ids) &gt; 0">
+                                                    <t t-if="len(line.invoice_line_ids) > 0">
                                                         <span t-field="line.invoice_line_ids[0].name"/>
                                                     </t>
                                                 </t>
@@ -202,18 +199,18 @@
                                             </td>
                                             <td name="invoice_debit">
                                                 <t t-if="line.move_type == 'out_invoice'">
-                                                    <span class="text-center" t-field="line.amount_total" t-options="{&quot;widget&quot;: &quot;float&quot;, &quot;precision&quot;:2}"/>
+                                                    <span class="text-center" t-field="line.amount_total"/>
                                                 </t>
                                                 <t t-else="">
-                                                    <span class="text-center" t-esc="0.0" t-options="{&quot;widget&quot;: &quot;float&quot;, &quot;precision&quot;:2}"/>
+                                                    <span class="text-center" t-esc="0.0" t-options='{"widget": "monetary", "display_currency": line.currency_id}'/>
                                                 </t>
                                             </td>
                                             <td name="invoice_credit">
-                                                <t t-if="len(line.payment_id) &gt; 0">
-                                                    <span class="text-center" t-field="line.amount_total" t-options="{&quot;widget&quot;: &quot;float&quot;, &quot;precision&quot;:2}"/>
+                                                <t t-if="len(line.payment_id) > 0">
+                                                    <span class="text-center" t-field="line.amount_total"/>
                                                 </t>
                                                 <t t-else="">
-                                                    <span class="text-center" t-esc="0.0" t-options="{&quot;widget&quot;: &quot;float&quot;, &quot;precision&quot;:2}"/>
+                                                    <span class="text-center" t-esc="0.0" t-options='{"widget": "monetary", "display_currency": line.currency_id}'/>
                                                 </t>
                                             </td>
                                             <t t-if="line.move_type == 'out_invoice'">
@@ -225,33 +222,33 @@
                                                 <t t-set="credit" t-value="credit + line.amount_total"/>
                                             </t>
                                             <td name="invoice_balance">
-                                                <span class="text-center" t-esc="balance" t-options="{&quot;widget&quot;: &quot;float&quot;, &quot;precision&quot;:2}"/>
+                                                <span class="text-center" t-esc="balance" t-options='{"widget": "monetary", "display_currency": line.currency_id}'/>
                                             </td>
                                         </tr>
                                     </t>
-                                    <tr t-if="len(lines) &gt; 0">
-                                        <td colspan="4">
-                                        </td>
+                                    <tr t-if="len(lines) > 0">
+                                       <td colspan="4">
+                                       </td>
                                         <td colspan="2">
-                                            <strong class="text-right">
+                                           <strong class="text-right">
                                                Grand Total
-                                            </strong>
-                                        </td>
+                                           </strong>
+                                       </td>
                                         <td>
-                                            <strong class="text-center">
-                                                <span class="text-center" t-esc="debit" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: line.currency_id}"/>
-                                            </strong>
-                                        </td>
+                                           <strong class="text-center">
+                                               <span class="text-center" t-esc="debit" t-options='{"widget": "monetary", "display_currency": line.currency_id}'/>
+                                           </strong>
+                                       </td>
                                         <td>
-                                            <strong class="text-center">
-                                                <span class="text-center" t-esc="credit" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: line.currency_id}"/>
-                                            </strong>
-                                        </td>
+                                           <strong class="text-center">
+                                               <span class="text-center" t-esc="credit" t-options='{"widget": "monetary", "display_currency": line.currency_id}'/>
+                                           </strong>
+                                       </td>
                                         <td>
-                                            <strong class="text-center">
-                                                <span class="text-center" t-esc="balance" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: line.currency_id}"/>
-                                            </strong>
-                                        </td>
+                                           <strong class="text-center">
+                                               <span class="text-center" t-esc="balance" t-options='{"widget": "monetary", "display_currency": line.currency_id}'/>
+                                           </strong>
+                                       </td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -259,7 +256,6 @@
                         <br/>
                         <div>
                             <table width="100%" class="table table-sm o_main_table">
-                                <b>ACCOUNT OUTSTANDING SUMMARY</b>
                                 <tr>
                                     <th id="th_current" class="text-center">
                                         <span class="bold-text">Current</span>
@@ -267,7 +263,9 @@
                                     <th id="th_fourteen" class="text-center">
                                         <span class="bold-text">14 Days</span>
                                     </th>
-
+                                    <th id="th_twenty_eight" class="text-center">
+                                        <span class="bold-text">28 Days</span>
+                                    </th>
                                     <th id="th_thirty" class="text-center">
                                         <span class="bold-text">30 Days</span>
                                     </th>
@@ -285,23 +283,25 @@
                                     <t t-set="aging_line" t-value="get_aging_line(o)"/>
                                     <tr>
                                         <td class="text-center">
-                                            <span class="text-center" t-esc="aging_line[1]" t-options="{&quot;widget&quot;: &quot;float&quot;, &quot;precision&quot;:2, &quot;display_currency&quot;: aging_line[0]}"/>
+                                            <span class="text-center" t-esc="aging_line[1]" t-options='{"widget": "monetary", "display_currency": aging_line[0]}'/>
                                         </td>
                                         <td class="text-center">
-                                            <span class="text-center" t-esc="aging_line[2]" t-options="{&quot;widget&quot;: &quot;float&quot;, &quot;precision&quot;:2, &quot;display_currency&quot;: aging_line[0]}"/>
-                                        </td>
-
-                                        <td class="text-center">
-                                            <span class="text-center" t-esc="aging_line[4]" t-options="{&quot;widget&quot;: &quot;float&quot;, &quot;precision&quot;:2, &quot;display_currency&quot;: aging_line[0]}"/>
+                                            <span class="text-center" t-esc="aging_line[2]" t-options='{"widget": "monetary", "display_currency": aging_line[0]}'/>
                                         </td>
                                         <td class="text-center">
-                                            <span class="text-center" t-esc="aging_line[5]" t-options="{&quot;widget&quot;: &quot;float&quot;, &quot;precision&quot;:2, &quot;display_currency&quot;: aging_line[0]}"/>
+                                            <span class="text-center" t-esc="aging_line[3]" t-options='{"widget": "monetary", "display_currency": aging_line[0]}'/>
                                         </td>
                                         <td class="text-center">
-                                            <span class="text-center" t-esc="aging_line[6]" t-options="{&quot;widget&quot;: &quot;float&quot;, &quot;precision&quot;:2, &quot;display_currency&quot;: aging_line[0]}"/>
+                                            <span class="text-center" t-esc="aging_line[4]" t-options='{"widget": "monetary", "display_currency": aging_line[0]}'/>
                                         </td>
                                         <td class="text-center">
-                                            <span class="text-center" t-esc="aging_line[7]" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: aging_line[0]}"/>
+                                            <span class="text-center" t-esc="aging_line[5]" t-options='{"widget": "monetary", "display_currency": aging_line[0]}'/>
+                                        </td>
+                                        <td class="text-center">
+                                            <span class="text-center" t-esc="aging_line[6]" t-options='{"widget": "monetary", "display_currency": aging_line[0]}'/>
+                                        </td>
+                                        <td class="text-center">
+                                            <span class="text-center" t-esc="aging_line[7]" t-options='{"widget": "monetary", "display_currency": aging_line[0]}'/>
                                         </td>
                                     </tr>
                                 </tbody>
