--- a/wonoproperty_pms/views/res_partner_views.xml
+++ b/wonoproperty_pms/views/res_partner_views.xml
@@ -16,11 +16,9 @@
             </xpath>
             <xpath expr="//span[@name='address_name']" position="before">
                 <field name="contact_type"/>
-                <field name="tenancy_agreement" readonly="1" attrs="{'invisible': [('contact_type', '!=', 'tenant')]}"/>
-                <field name="date_start" attrs="{'invisible': [('contact_type', '!=', 'tenant')]}"/>
-                <field name="date_end" attrs="{'invisible': [('contact_type', '!=', 'tenant')]}"/>
-                <separator/>
-                <separator/>
+                <field name="tenancy_agreement"/>
+                <field name="date_start"/>
+                <field name="date_end"/>
             </xpath>
         </field>
     </record>
