--- a/wonoproperty_pms/views/account_move_views.xml
+++ b/wonoproperty_pms/views/account_move_views.xml
@@ -33,4 +33,17 @@
             </xpath>
         </field>
     </record>
+
+    <record id="print_invoice_zip" model="ir.actions.server">
+            <field name="name">Print as Zip</field>
+            <field name="state">code</field>
+            <field name="type">ir.actions.server</field>
+            <field name="model_id" ref="model_account_move"/>
+            <field name="binding_model_id" ref="model_account_move"/>
+            <field name="binding_view_types">list</field>
+            <field name="code">
+                if records:
+                    action = records.print_invoice_zip()
+            </field>
+        </record>
 </odoo>
